# coal-fire-predictor

./: .env_example  .gitignore  Dockerfile  README.md  backend_ds_contract.md  backend_frontend_contract.md  docker-compose.yml  full_architecture.md  manual_app.pptx  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 1374510d9790_size_field_picket_temperature_model_.py  de7b1bc84007_create_initial_tables.py  ef1793dda181_remove_coal_type_from_temperatures.py
app/: main.py
app/application/use_cases/: calculate_fire_risk.py  evaluate_model_quality.py  get_dashboard_data.py  get_pile_history.py  upload_data.py
app/core/: config.py  dependencies.py  logger.py
app/domain/: entities.py  interfaces.py
app/infrastructure/database/: models.py  repositories.py
app/infrastructure/ml/: adapter.py
app/presentation/api/v1/: router.py
app/presentation/api/v1/endpoints/: analytics.py  dashboard.py  data.py  pile_history.py  predict.py
ml/: predict.py
ml/models/: final_model.joblib
scripts/: check_code.py
