[project]
name = "coal-fire-predictor"
version = "0.1.0"
description = "Web-приложение для прогнозирования самовозгорания угля при открытом хранении"
authors = [
    { name = "Eduard Slobodyanik", email = "slobodyanik.ed@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115.0,<0.117.0",
    "uvicorn[standard]>=0.30.0,<0.32.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "environs>=14.2.0,<15.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "joblib>=1.4.0,<2.0.0",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
httpx = ">=0.28.0,<0.29.0"
ruff = ">=0.5.0,<0.6.0"
black = ">=24.0.0,<25.0.0"
isort = ">=5.13.0,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
fixable = ["ALL"]
unfixable = []

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  | migrations
  | ml/models
)/
'''

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true